widgetario-k8s/Part4/widgetario-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: widgetario-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: widgetario.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web
              port:
                number: 80
    - host: api.widgetario.local
      http:
        paths:
        - path: /products
          pathType: Prefix
          backend:
            service:
              name: products-api
              port:
                number: 80
